# starforge

./: AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  STARFORGE_REFERENCE.md  WIP_GAME_ENGINE.md
.cargo/: config.toml
.codex/environments/: environment.toml
content/: README.md  ruleset.example.yaml
content/taxonomy/: commands.yaml  content.yaml  enums.yaml  events.yaml  systems.yaml
crates/starforge-api/: Cargo.toml
crates/starforge-api/assets/: taxonomy.css  taxonomy.html  taxonomy.js
crates/starforge-api/src/: lib.rs  live.rs  main.rs
crates/starforge-cli/: Cargo.toml
crates/starforge-cli/src/: cli.rs  live.rs  main.rs  render.rs  tui_actions.rs
crates/starforge-cli/tests/: cli_named_args.rs
crates/starforge-content/: Cargo.toml
crates/starforge-content/src/: lib.rs
crates/starforge-core/: Cargo.toml
crates/starforge-core/src/: balance.rs  command.rs  config.rs  event.rs  ids.rs  lib.rs  replay.rs  session.rs  snapshot.rs  state.rs
crates/starforge-inference/: Cargo.toml
crates/starforge-inference/src/: lib.rs
crates/starforge-scenarios/: Cargo.toml
crates/starforge-scenarios/src/: lib.rs
crates/starforge-taxonomy/: Cargo.toml
crates/starforge-taxonomy/src/: lib.rs
scenarios/: README.md  two_player_skirmish.example.yaml
scripts/: bootstrap-worktree.sh  new-worktree.sh  remove-worktree.sh
