[workspace]
members = [
    "crates/starforge-api",
    "crates/starforge-cli",
    "crates/starforge-content",
    "crates/starforge-core",
    "crates/starforge-inference",
    "crates/starforge-scenarios",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
