[workspace]
members = [
    "crates/starforge-api",
    "crates/starforge-cli",
    "crates/starforge-content",
    "crates/starforge-core",
    "crates/starforge-inference",
    "crates/starforge-scenarios",
    "crates/starforge-taxonomy",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8.8"
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
