[package]
name = "starforge-api"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
starforge-content = { path = "../starforge-content" }
starforge-core = { path = "../starforge-core" }
starforge-taxonomy = { path = "../starforge-taxonomy" }
tokio.workspace = true

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
