[package]
name = "starforge-taxonomy"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
starforge-content = { path = "../starforge-content" }
starforge-core = { path = "../starforge-core" }
strum.workspace = true
